# open-gov

./: Cargo.toml  README.md  docker-compose.yml
migrations/2023-04-14-171205_create_divisions/: up.sql
migrations/2023-04-14-171218_create_division_updates/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs
