[package]
name = "opengov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4.0"
bytes = "1.4.0"
http-body-util = "0.1.0-rc.2"
serde = {version = "1.0.156", features = ["derive"]}
serde_json = "1.0"
hyper-native-tls = "0.3.0"
hyper-tls = "0.5.0"
clokwerk = "0.4.0"
log = "0.4.17"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
lazy_static = "1.4.0"
